--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"@expo-google-fonts/dm-sans": "^0.2.2",
 		"@react-navigation/native": "^6.0.10",
 		"@react-navigation/stack": "^6.2.1",
+		"axios": "^0.27.2",
 		"expo": "~45.0.0",
 		"expo-secure-store": "~11.2.0",
 		"expo-status-bar": "~1.3.0",
