--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.3",
-    "validatorjs": "^3.22.1"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"type": "module",
+	"scripts": {
+		"dev": "nodemon server.js"
+	},
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.4.3",
+		"semver": "^7.3.7",
+		"validatorjs": "^3.22.1"
+	}
 }
